syntax = "proto3";
package proto;

import "google/protobuf/struct.proto";

option go_package = "github.com/veraison/services/proto";

message EvidenceContext {
  string tenant_id = 1 [json_name = "tenant-id"];
  string trust_anchor_id = 2 [json_name = "trust-anchor-id"];
  string reference_id = 3 [json_name = "reference-id"];
  google.protobuf.Struct evidence = 5;
  bool require_further_processing = 6 [json_name = "require-further-processing"];
  string media_type = 7 [json_name = "media-type"];
}
